Thay backend cu bang ban da fix + hoan thien luong duyet milestone/escrow
Thay the toan bo ma nguon backend cu (root src/ + pom.xml) bang ban da sua
loi, GIU NGUYEN frontend/ va cac module khac.

Sua loi bien dich/runtime (theo CHANGELOG_SUA_LOI):
- Doi LCKEscrowController -> EscrowController (ten class sai chan build).
- Bo JwtTokenProvider trung lap (dung deprecated jjwt API).
- EscrowRepository.findByJobJobId thay cho findByProjectId (field khong ton tai).
- Milestone gop 1 khoa chinh; MatchingAIService doc API key tu properties.
- Fix LoginRequest @Email, User.getAuthorities, UserService null role...

Hoan thien chuc nang con thieu:
- MilestoneService.approveMilestone(): giai ngan tu Escrow sang vi Expert,
  ghi Transaction ESCROW_RELEASE, Escrow HELD->RELEASED, Milestone->APPROVED,
  Job->COMPLETED khi moi milestone xong.
- MilestoneService.rejectMilestone(): Milestone->REJECTED, giu tien trong Escrow.
- 2 endpoint POST /api/milestones/{id}/approve va /reject.